IconManager [ #348 ] - IconManager.java - Simplified `IconSet` addition and removal and it is now strict - IconManager.java - Any `find*` methods can return `null`, while `get*` methods will either return non-`null` value or throw exception - IconSet.java - Made into a proper base interface for any icon sets and is now used across all related classes instead of `AbstractIconSet` - XmlIconSet.java - Now uses new `Resource` interface as a source for XML, all path operations were moved into converters - XmlIconSetConverter.java - New custom converter for `XmlIconSet` that provides necessary context settings for icon converters - IconSetData.java - Removed as redundant, all icons are read directly into `XmlIconSet` - AbstractIconDataConverter.java - New custom abstract converter for any kinds of icon data - XmlUtils.java - Added method for reading various `Resource` types from node attributes for convenience and backward compatibility - RuntimeIconSet.java - New `IconSet` implementation for convenient runtime icon set creation - ImageIconData.java, SvgIconData.java - Added various constructors for convenient runtime icon data creation
API
- Resource.java - New interface for any custom resource, provides `InputStream` for reading the resource
- Resource.java - Fully replaced old inconvenient `Resource` (old) class, all related places across the code have been adjusted accordingly
- Resource.java (old), ResourceLocation.java - Removed and replaced by `Resource` interface in API
- UrlResource.java, FileResource.java, ClassResource.java - New `Resource` implementations for most common use cases
- ResourceException.java - Custom `RuntimeException` used for `Resource` implementations exclusively
- DisabledCopySupplier.java - New interface for classes that can return disabled copy of themselves, currently used for complex `Icon`s
- TransparentCopySupplier.java - New interface for classes that can return transparent copy of themselves, currently used for complex `Icon`s

Skins
